# ros2-sample

./: README.md  package.xml  setup.cfg  setup.py
install/: setup.sh
install/rpi_robot_py/lib/rpi_robot_py/: human_sensor  servo
install/rpi_robot_py/share/rpi_robot_py/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
my_first_ros2/: CMakeLists.txt  README.md  setup.py
my_first_ros2/py_scripts/: input_human_sensor.py  output_servo.py  sample.py  sample2.py
python_programs/: input_sensor.py
rpi_robot_py/: package.xml  setup.cfg  setup.py
rpi_robot_py/launch/: rpi_robot.launch.py
rpi_robot_py/rpi_robot_py/: controller.py  input_human_sensor.py  output_servo.py
